[tool.poetry]
name = "es-index-api"
version = "0.1.0"
description = ""
authors = ["Ruo Lee <comsa33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
elasticsearch = "^8.13.0"
pymongo = "^4.6.3"
flagembedding = "^1.2.9"
aiohttp = "^3.9.5"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
icecream = "^2.1.3"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
